[tool.poetry]
name = "pyt"
version = "0.1.0"
description = "Pure Python implementation of Git"
authors = ["otherJL0 <jonathanglopez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.1"
mypy = "^0.910"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
