[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyt"
authors = [{ name = "Jonathan Lopez", email = "jonathanglopez@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["typer[all]", "rich"]

[project.optional-dependencies]
dev = ["pip-tools", "flit", "isort", "pylint", "mypy", "black"]
test = ["pytest", "pytest-cov", "coverage"]

[project.urls]
Home = "https://www.github.com/otherJL0/pyt"
Source = "https://www.github.com/otherJL0/pyt"


[project.scripts]
pyt = "pyt:main"
